<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="pref_location_label" translatable="false">Location</string>
    <string name="pref_location_key" translatable="false">location_pref</string>
    <!-- Key name for storing location status in Shared Preferences-->
    <string name="pref_location_status_key" translatable="false">location_status</string>

    <string name="pref_location_default" translatable="false">94043</string>
    <string name="pref_temp_units_label" translatable="false">Temperature Units</string>
    <string name="pref_temp_units_key" translatalbe="false">temp_units_pref</string>
    <string name="pref_temp_units_default" translatable="false">imperial</string>
    <string name="pref_temp_units_metric" translatable="false">metric</string>
    <string-array name="pref_temp_units_options">
        <item>Celcius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="pref_temp_units_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string name="pref_notification_key">notification_pref</string>
    <string name="pref_notification_title">Notifications</string>
    <string name="pref_notifications_default" translatable="false">true</string>
    <string name="pref_notification_true">Enabled</string>
    <string name="pref_notification_false">Not Enabled</string>

    <string name="pref_temp_metric_default">imperial</string>
    <string name="action_share">Share</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <!-- Temperature format for displaying high and low temperatures -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

        <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification
    </string>

    <!-- Strings used when displaying the state of the Location in settings-->
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1%s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>xliff:g>)"</string>

    <!-- Empty Weather Database -->
    <string name="empty_forecast_list">No Weather Information Available</string>
    <string name="empty_forecast_list_no_internet">No weather information available. Please Check Network Connection</string>
    <string name="empty_forecast_list_server_down">No weather information available. The server is down.</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning values.</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather service.</string>

    <!-- A11y -->
    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_high_temp">High:  <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>

    <!-- Format for retrieving art from an external source [CHAR LIMIT=NONE] -->
    <string name="format_art_url" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>

    <!-- Label for the art pack preference [CHAR LIMIT=30] -->
    <string name="pref_art_pack_label">Icon Pack</string>

    <!-- Label for Sunshine option in art pack preference [CHAR LIMIT=25] -->
    <string name="pref_art_pack_label_sunshine">Sunshine</string>

    <!-- Label for cute dogs option in art pack preference [CHAR LIMIT=25] -->
    <string name="pref_art_pack_label_cute_dogs">Cute dogs</string>

    <!-- Key name for art pack unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_key" translatable="false">art_pack</string>

    <!-- Value in SharedPreferences for Sunshine art pack option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_sunshine" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>

    <!-- Value in SharedPreferences for cute dogs art pack  option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_cute_dogs" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-mdpi/art_%s.png</string>

    <!-- -->
    <string name="gcm_defaultSenderId" translatable="false">852700651799</string>
    <!-- Names of the art packs available -->
    <string-array name="pref_art_pack_options">
        <item>@string/pref_art_pack_label_sunshine</item>
        <item>@string/pref_art_pack_label_cute_dogs</item>
    </string-array>



    <!-- Format for retrieving art from an external source [CHAR LIMIT=NONE] -->
    <string-array name="pref_art_pack_values">
        <item>@string/pref_art_pack_sunshine</item>
        <item>@string/pref_art_pack_cute_dogs</item>
    </string-array>

    <!-- Used to form a severe weather alert that reads "Heads up: <weather> in <location>!" -->
    <string name="gcm_weather_alert">Heads up: %1$s in %2$s!</string>
    // TODO: Get the SenderID from the Developer Console
    <string name="gcm_default_senderId" translatable="false">852700651799</string>
</resources>
